--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@ input[type="search"]{
 <body>
    <header class="header">
      <div class="search-bar">
-          <input type="search" placeholder="Nigeria" id="search-fetch-input">
+          <input type="search" placeholder="type or paste your current location, be it street, city, state or country e t.c" id="search-fetch-input">
      </div>
      <div class="search-icon" id="search-fetch-button">
           <i class="fas fa-search"></i>
