moved from es => cjs

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,11 @@
 <script src="https://kit.fontawesome.com/edec7f25e3.js" crossorigin="anonymous"></script>
 <title>Whether Analysis</title>
   <style>
+  @import url('https://fonts.googleapis.com/css2?family=Agdasima:wght@400;700&family=Geist:wght@100..900&family=Permanent+Marker&display=swap');
     *{
     margin: 0;
     box-sizing: border-box;
-    font-family: Sans-serif;
+    font-family: "Geist";
 }
 
 body, html{
