--- a/public/index.html
+++ b/public/index.html
@@ -115,6 +115,6 @@ input[type="search"]{
             <i class="fas fa-water"></i> <div><span id="wind-speed">4.36Km/H</span> <span>Wind Speed</span></div>
         </div>
   </footer>
-  <script src="app.js"></script>
+  <script src="app.ts"></script>
    </body>
 </html>
