feat: moved to ts

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@ footer{
     display: flex;
     justify-content: space-between;
     position: fixed;
+    background: white;
     bottom: 0;
     padding: 20px;
     width: 100%;
@@ -115,6 +116,6 @@ input[type="search"]{
             <i class="fas fa-water"></i> <div><span id="wind-speed">4.36Km/H</span> <span>Wind Speed</span></div>
         </div>
   </footer>
-  <script src="app.ts"></script>
+  <script src="app.js"></script>
    </body>
 </html>
